second try to fix bottom white space

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -419,7 +419,6 @@
     justify-content: center;
     align-items: center;
     margin-top: 100px;
-    margin-bottom: 50px;
     gap: 40px;
   }
 
@@ -430,7 +429,7 @@
 
   .blackback {
     background-color: #1d1c1e;
-    height: 400px;
+    height: 450px;
     position: absolute;
     width: 100%;
   }
